--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.15.0",
     "react-toastify": "^10.0.5",
+    "reactjs-popup": "^2.0.6",
     "redux": "^5.0.1",
     "styled-components": "^6.0.7",
     "vite-plugin-svgr": "^3.2.0"
