--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@reduxjs/toolkit": "^2.2.4",
     "@vitejs/plugin-react-swc": "^3.3.2",
     "axios": "^1.6.8",
+    "clsx": "^2.1.1",
+    "formik": "^2.4.6",
     "modern-normalize": "^2.0.0",
     "normalize.css": "^8.0.1",
     "react": "^18.2.0",
@@ -28,7 +30,8 @@
     "reactjs-popup": "^2.0.6",
     "redux": "^5.0.1",
     "styled-components": "^6.0.7",
-    "vite-plugin-svgr": "^3.2.0"
+    "vite-plugin-svgr": "^3.2.0",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@swc/cli": "^0.1.62",
