--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-toastify": "^10.0.5",
     "reactjs-popup": "^2.0.6",
     "redux": "^5.0.1",
+    "redux-persist": "^6.0.0",
     "styled-components": "^6.0.7",
     "vite-plugin-svgr": "^3.2.0",
     "yup": "^1.4.0"
