--- a/package.json
+++ b/package.json
@@ -17,13 +17,13 @@
     "@reduxjs/toolkit": "^2.2.4",
     "@vitejs/plugin-react-swc": "^3.3.2",
     "axios": "^1.6.8",
-    "clsx": "^2.1.1",
     "formik": "^2.4.6",
     "modern-normalize": "^2.0.0",
     "normalize.css": "^8.0.1",
     "react": "^18.2.0",
     "react-css-modules": "^4.7.11",
     "react-dom": "^18.2.0",
+    "react-loader-spinner": "^6.1.6",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.15.0",
     "react-toastify": "^10.0.5",
